Will call error on firefox fixed

--- a/src/Iframe/IframeStyle.css
+++ b/src/Iframe/IframeStyle.css
@@ -26,3 +26,4 @@ body{
     line-height: 22px;
     color: #333;
 }
+.leaflet-fade-anim .leaflet-tile,.leaflet-zoom-anim .leaflet-zoom-animated { will-change:auto !important; }
